Closed Bug 612429 Opened 15 years ago Closed 15 years ago

Can't build debug on MaeMo/ARM due to inclusion of SSE2 asm

Categories

(Core :: Audio/Video, defect)

ARM
All
defect
Not set
major

Tracking

()

RESOLVED FIXED

People

(Reporter: crowderbt, Assigned: cajbir)

References

Details

Attachments

(1 file, 3 obsolete files)

c++ -o yuv_row_posix.o -c -fvisibility=hidden -D_IMPL_NS_GFX -DMOZILLA_INTERNAL_API -D_IMPL_NS_COM -DEXPORT_XPT_API -DEXPORT_XPTC_API -D_IMPL_NS_GFX -D_IMPL_NS_WIDGET -DIMPL_XREAPI -DIMPL_NS_NET -DIMPL_THEBES -DSTATIC_EXPORTABLE_JS_API -DOSTYPE=\"Linux2.6\" -DOSARCH=Linux -I/home/crowder/mobilla/gfx/ycbcr -I. -I../../dist/include -I../../dist/include/nsprpub -I/home/crowder/mobilla/objdir-mmo-dbg/dist/include/nspr -I/home/crowder/mobilla/objdir-mmo-dbg/dist/include/nss -fPIC -fno-rtti -fno-exceptions -Wall -Wpointer-arith -Woverloaded-virtual -Wsynth -Wno-ctor-dtor-privacy -Wno-non-virtual-dtor -Wno-invalid-offsetof -Wno-variadic-macros -Werror=return-type -pedantic -Wno-long-long -fno-strict-aliasing -pthread -pipe -DDEBUG -D_DEBUG -DTRACING -g -DMOZILLA_CLIENT -include ../../mozilla-config.h -MD -MF .deps/yuv_row_posix.pp /home/crowder/mobilla/gfx/ycbcr/yuv_row_posix.cpp {standard input}: Assembler messages: {standard input}:894: Error: bad instruction `emms' {standard input}:1147: Error: bad instruction `emms' make[5]: *** [yuv_convert.o] Error 1 make[5]: Leaving directory `/home/crowder/mobilla/objdir-mmo-dbg/gfx/ycbcr' make[4]: *** [libs] Error 2 make[4]: Leaving directory `/home/crowder/mobilla/objdir-mmo-dbg/gfx' make[3]: *** [libs_tier_platform] Error 2 make[3]: Leaving directory `/home/crowder/mobilla/objdir-mmo-dbg' make[2]: *** [tier_platform] Error 2 make[2]: Leaving directory `/home/crowder/mobilla/objdir-mmo-dbg' make[1]: *** [default] Error 2 make[1]: Leaving directory `/home/crowder/mobilla/objdir-mmo-dbg' make: *** [build] Error 2
Summary: Can't build debug on arm due to inclusion of SSE2 asm → Can't build debug on MaeMo/ARM due to inclusion of SSE2 asm
Looks to be a regression of bug 564901. I must have missed a change we made when upgrading to the latest YCbCr code in bug 583138.
Attached patch updated version of the old patch (obsolete) — Splinter Review
Assignee: nobody → crowderbt
Attachment #490745 - Flags: review?(chris.double)
Attachment #490745 - Attachment is obsolete: true
Attachment #490745 - Flags: review?(chris.double)
Attachment #490754 - Flags: review?(chris.double)
Attachment #490754 - Flags: review?(chris.double) → review+
Comment on attachment 490754 [details] [diff] [review] This updates convert.patch as well Asking for approval to land so we can fix maemo bustage.
Attachment #490754 - Flags: approval2.0?
Keywords: checkin-needed
Comment on attachment 490754 [details] [diff] [review] This updates convert.patch as well Woops, building in the wrong tree and I led myself to believe this was fixed... new patch shortly
Attachment #490754 - Flags: review+
Attached patch new (obsolete) — Splinter Review
This gets me further along, but I am having another build issue later. Chris: can you handle generating the patch fix for this? I'm not able to generate a patch that resembles yours closely, and so I'm ending up with a convert.patch that includes dozens of changes instead of just one.
Attachment #490754 - Attachment is obsolete: true
Keywords: checkin-needed
Attached patch FixSplinter Review
Brian's fix with change to .patch file as requested. I've carried reviewed forward and re-requested approval.
Assignee: crowderbt → chris.double
Attachment #490961 - Attachment is obsolete: true
Status: NEW → ASSIGNED
Attachment #491410 - Flags: review+
Attachment #491410 - Flags: approval2.0?
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: