Bug 612429 - Fix Maemo/Android/ARM inclusion of SSE2 code - r=doublec a=roc